log
Mon 20 Mar 2023 11:08:12 PM UTC: 
 tests:  0|6
total_score: 0/70
ea9d91d
Thu 23 Mar 2023 06:29:40 PM UTC: 
 list.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  0|0
4eb0a0d
Thu 23 Mar 2023 06:30:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:15: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   43 |   return list -> next -> data;
      |               ^~
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
acdfb23
Thu 23 Mar 2023 06:31:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
311a67d
Thu 23 Mar 2023 06:34:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ca238e6
Thu 23 Mar 2023 06:34:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2623b98
Thu 23 Mar 2023 06:35:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d631991
Thu 23 Mar 2023 06:35:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c30bf1c
Thu 23 Mar 2023 06:42:57 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
c6b479c
Thu 23 Mar 2023 06:43:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e78cfe2
Thu 23 Mar 2023 06:43:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f7601f3
